Harden copy-on-write merge output schema and error handling
Guard the CoW merge-writer's output schema against duplicate row-lineage
field IDs: IcebergPageSinkProvider now reuses
IcebergMergeSink.getRewriteSchema instead of unconditionally appending
MetadataColumns.ROW_ID and LAST_UPDATED_SEQUENCE_NUMBER, which broke a v3
table whose schema already carried those fixed field IDs.

CopyOnWriteFileRewriter surfaces filesystem I/O failures (rewrite write
failure, empty-output cleanup failure) as TrinoException with
ICEBERG_FILESYSTEM_ERROR instead of UncheckedIOException, matching the
error-code convention used elsewhere in the connector.

Minor cleanup: use Guava's ImmutableList instead of List.of() in
IcebergMergeSink, and cap hasCommitStateUnknownException's cause-chain
walk with a fixed depth limit instead of Floyd's tortoise-and-hare, since
the loop no longer needs cycle detection precision beyond a sane bound.

Add copy-on-write test coverage: a rewrite scaling across many data
files, and a concurrent OPTIMIZE-vs-copy-on-write-DELETE test verifying
neither operation silently loses or duplicates rows regardless of which
commit wins the race. Document iceberg.copy-on-write-rewrite-threads in
the connector properties reference.